# Stamp-recognition

./: LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt  run.sh  run_docker.sh
API/: database.py  myapp.py
Detection/: Detect_grayscale_stamps.py  Detection_Model.ipynb
Embeddings/: DenseNet121 model.ipynb  DenseNet121_implementation.ipynb  EfficientNet model .ipynb  new_CNN_for_embeddings.ipynb
tests/: api.py
